--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@nuxt/eslint": "^1.2.0",
     "@nuxt/image": "^1.10.0",
     "@tailwindcss/vite": "^4.0.17",
+    "@tanstack/vue-query": "^5.70.0",
     "eslint": "^9.23.0",
     "nuxt": "^3.16.1",
     "tailwindcss": "^4.0.17",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.14"
   }
 }
